# Random-Roll-Call

./: .gitignore  FINAL_README.md  LICENSE  README.en.md  README.md  build.py  pyproject.toml  requirements.txt  template.xlsx  test_import.py  test_main_import.py
.github/workflows/: build.yml
data/: classes.json  config.json  history.json  students.json
docs/: user_guide.md
src/: excel_importer.py  main.py
